--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "framer-motion": "^7.0.0",
     "lucide-react": "^0.510.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1"
   },
