--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^7.8.2",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
