--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "bootstrap": "^5.3.6",
     "framer-motion": "^7.0.0",
     "lucide-react": "^0.510.0",
-    "react": "^18.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^7.8.2",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vite": "^7.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   },
   "browserslist": {
     "production": [
